# EBO_SALES

./: README.md  app.py  shhail.md  store-performance-plan.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  plan.md  pyproject.toml
backend/.github/workflows/: ci.yml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/routers/: __init__.py  analytics.py  breakdowns.py  export.py  filters.py  health.py  products.py  search.py  stores.py  transactions.py
backend/app/core/: __init__.py  config.py  context.py  exception_handlers.py  exceptions.py  logging.py  middleware.py
backend/app/db/: __init__.py  engine.py  session.py
backend/app/models/: __init__.py  base.py  ebo_store_master.py  item_master.py  olabi_sales.py  store_performance.py
backend/app/repositories/: __init__.py  base.py  sales_repository.py  store_repository.py
backend/app/schemas/: __init__.py  analytics.py  breakdowns.py  common.py  filters.py  filters_options.py  invoices.py  metrics.py  products.py  search.py  stores.py  transactions.py  trends.py
backend/app/services/: __init__.py  analytics_service.py  store_service.py
backend/docs/: SPEC.md
backend/nginx/: default.conf
frontend/: .env.example  next.config.ts  package-lock.json  package.json  plan.md
frontend/docs/: motion-plan.md
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/invoices/: page.tsx
frontend/src/app/metrics/: page.tsx
frontend/src/app/products/: page.tsx
frontend/src/app/staff/: page.tsx
frontend/src/app/stores/: page.tsx
frontend/src/components/: export-button.tsx
frontend/src/components/charts/: breakdown-bars.tsx  trend-chart.tsx
frontend/src/components/filters/: date-range-group.tsx  filter-chips.tsx  filter-group.tsx  filter-rail-content.tsx  filter-rail.tsx  mobile-filters.tsx  multi-select-group.tsx  quantity-group.tsx  range-calendar.tsx
frontend/src/components/invoices/: invoice-detail.tsx  invoice-route.tsx
frontend/src/components/kpis/: kpi-cards.tsx
frontend/src/components/layout/: app-shell.tsx  filter-rail.tsx  page-crumb.tsx  site-header.tsx
frontend/src/components/metrics/: metric-detail.tsx  metric-route.tsx
frontend/src/components/motion/: hover-lift.tsx  reveal.tsx
frontend/src/components/products/: product-card.tsx  product-detail-modal.tsx  product-gallery.tsx  product-page.tsx  product-route.tsx
frontend/src/lib/: dates.ts  filters.ts  format.ts  query.ts  use-filters.ts
(+32 files in other folders)
